--- a/package.json
+++ b/package.json
@@ -4,17 +4,89 @@
   "description": "A boiler plate for modern react applications using typescript styled with tailwindCss and bundled with parcel",
   "main": ".eslintrc.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prebuild": "run-s clean",
+    "build": "parcel build src/index.html --no-source-maps",
+    "clean": "rimraf ./dist ./.cache",
+    "start": "parcel src/index.html -p 4200 --host 0.0.0.0 --no-source-maps --open",
+    "lint-fix": "eslint --ext tsx --fix ./src",
+    "lint": "eslint --ext tsx ./src",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ersanyamarya/react-typescript-tailwind-parcel-boilerplate.git"
   },
-  "keywords": ["react","typescript","boilerplate","tailwindcss","emotions"],
-  "author": "",
-  "license": "ISC",
+  "browserslist": [
+    "last 3 and_chr versions",
+    "last 3 chrome versions",
+    "last 3 opera versions",
+    "last 3 ios_saf versions",
+    "last 3 safari versions"
+  ],
+  "keywords": [
+    "react",
+    "typescript",
+    "boilerplate",
+    "tailwindcss",
+    "emotions"
+  ],
+  "author": "Sanyam Arya",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ersanyamarya/react-typescript-tailwind-parcel-boilerplate/issues"
   },
-  "homepage": "https://github.com/ersanyamarya/react-typescript-tailwind-parcel-boilerplate#readme"
+  "homepage": "https://github.com/ersanyamarya/react-typescript-tailwind-parcel-boilerplate#readme",
+  "lint-staged": {
+    "*.ts": "eslint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-react",
+      "@babel/preset-env",
+      [
+        "@emotion/babel-preset-css-prop",
+        {
+          "sourceMap": false
+        }
+      ]
+    ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.6",
+    "lint-staged": "^10.5.3",
+    "npm-run-all": "^4.1.5",
+    "parcel-bundler": "^1.12.4",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "@emotion/babel-preset-css-prop": "^11.0.0",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.2",
+    "@emotion/styled": "^11.0.0",
+    "babel-eslint": "^10.1.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  }
 }
