--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,21 +5,28 @@
     "experimentalDecorators": true,
     "module": "commonjs",
     "target": "es2018",
-    "jsx": "preserve",
+    "jsx": "react",
+    "sourceMap": true,
     "noEmit": true,
     "isolatedModules": true,
     "skipLibCheck": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "removeComments": false,
+    "baseUrl": "./src",
     "preserveConstEnums": true,
     "lib": ["es6", "esnext", "es2015", "es2016", "es2017", "es2018", "DOM"],
     "esModuleInterop": true,
     "noImplicitAny": false,
     "suppressImplicitAnyIndexErrors": true,
     "moduleResolution": "node",
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "paths": {
+      "~/*": ["./*"]
+    },
+    "typeRoots": ["node_modules/@types"],
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*", "twin.d.ts"],
-  "exclude": ["node_modules", "public", ".cache"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", ".cache"]
 }
