--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A boiler plate for modern react applications using typescript styled with tailwindCss and bundled with parcel",
   "main": ".eslintrc.js",
   "scripts": {
-    "prebuild": "run-s clean",
+    "prebuild": "run-s clean && npm run build:tailwind",
     "build": "parcel build src/index.html --no-source-maps",
     "clean": "rimraf ./dist ./.cache",
     "start": "parcel src/index.html -p 4200 --host 0.0.0.0 --no-source-maps --open",
@@ -44,25 +44,16 @@
       "pre-commit": "lint-staged"
     }
   },
-  "babel": {
-    "presets": [
-      "@babel/preset-react",
-      "@babel/preset-env",
-      [
-        "@emotion/babel-preset-css-prop",
-        {
-          "sourceMap": false
-        }
-      ]
-    ]
-  },
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-react": "^7.12.10",
+    "@emotion/babel-preset-css-prop": "^11.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
@@ -81,11 +72,10 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@emotion/babel-preset-css-prop": "^11.0.0",
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.2",
     "@emotion/styled": "^11.0.0",
-    "babel-eslint": "^10.1.0",
+    "@reach/router": "^1.3.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
