--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
     "typeRoots": ["node_modules/@types"],
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*", "twin.d.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", ".cache"]
 }
